src/objects/Discretionary_Plan__c/Discretionary_Plan__c.object-meta.xml
<CustomObject>
    <description>Discretionary Plan : New related list in opportunity</description>
    <label>Discretionary Plan</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Discretionary Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discretionary Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>