src/objects/Discretionary_Plan__c/fields/Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget__c</fullName>
    <label>Approved Budget Annual</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>