src/objects/Discretionary_Plan__c/fields/Approved_Budget_Q2__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget_Q2__c</fullName>
    <label>Approved Budget Q2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>