src/objects/Discretionary_Plan__c/fields/Carry_Over__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If DR Spend carried over from last year</description>
    <label>Carry Over</label>
    <type>Checkbox</type>
</CustomField>