src/objects/Discretionary_Plan__c/fields/DLI_Spent__c.field-meta.xml
<CustomField>
    <fullName>DLI_Spent__c</fullName>
    <label>DLI Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>