src/objects/Discretionary_Plan__c/fields/DR_Funded__c.field-meta.xml
<CustomField>
    <fullName>DR_Funded__c</fullName>
    <label>DR Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>