src/objects/Discretionary_Plan__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>Text(Opportunity__r.SBU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU</label>
    <type>Text</type>
</CustomField>