src/objects/Discretionary_Plan__c/validationRules/BudgetAnnualOrQuarter.validationRule-meta.xml
<ValidationRule>
    <fullName>BudgetAnnualOrQuarter</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
Approved_Budget__c &lt;&gt; 0, 
or( 
Approved_Budget_Q1__c &lt;&gt; 0, 
Approved_Budget_Q2__c &lt;&gt; 0, 
Approved_Budget_Q3__c &lt;&gt; 0, 
Approved_Budget_Q4__c &lt;&gt; 0 
) 
)</errorConditionFormula>
    <errorDisplayField>Approved_Budget__c</errorDisplayField>
    <errorMessage>Use either the Annual Budget or Quarterly Budget, not both.</errorMessage>
</ValidationRule>