src/objects/Discretionary_Plan__c/validationRules/BudgetAnnualOrQuarter_DS.validationRule-meta.xml
<ValidationRule>
    <fullName>BudgetAnnualOrQuarter_DS</fullName>
    <active>false</active>
    <errorConditionFormula>and(
not CONTAINS( $Profile.Name, &quot;API&quot; ),
not CONTAINS( $Profile.Name, &quot;Admin&quot; ),
 or(
  Approved_Budget_Q1__c &lt;&gt; 0,
  Approved_Budget_Q2__c &lt;&gt; 0,
  Approved_Budget_Q3__c &lt;&gt; 0,
  Approved_Budget_Q4__c &lt;&gt; 0
 ),
 Opportunity_SBU__c = &quot;D&amp;S&quot; 
)</errorConditionFormula>
    <errorDisplayField>Approved_Budget__c</errorDisplayField>
    <errorMessage>D&amp;S can only use Annual Budget.</errorMessage>
</ValidationRule>