src/objects/Discretionary_Plan__c/validationRules/BudgetAnnualOrQuarter_NonDS.validationRule-meta.xml
<ValidationRule>
    <fullName>BudgetAnnualOrQuarter_NonDS</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
 Approved_Budget__c &lt;&gt; 0, 
 Opportunity_SBU__c &lt;&gt; &quot;D&amp;S&quot; 
) &amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Approved_Budget_Q1__c</errorDisplayField>
    <errorMessage>Commercial can only use Quarterly Budget.</errorMessage>
</ValidationRule>