src/objects/Discretionary_Plan__c/validationRules/DnS_No_Quotes_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_No_Quotes_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
 SBU__c  = &quot;D&amp;S&quot;, 
or( 
FIND(&apos;&quot;&apos;,  Comments__c  , 1 )&gt;0 
) 
)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Comments.</errorMessage>
</ValidationRule>