src/objects/Discretionary_Plan__c/validationRules/EstimateAnnualOrQuarter.validationRule-meta.xml
<ValidationRule>
    <fullName>EstimateAnnualOrQuarter</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
not CONTAINS( $Profile.Name, &quot;API&quot; ),
not CONTAINS( $Profile.Name, &quot;Admin&quot; ),
 Owner_Estimate__c &lt;&gt; 0, 
 or( 
  Owner_Estimate_Q1__c &lt;&gt; 0, 
  Owner_Estimate_Q2__c &lt;&gt; 0, 
  Owner_Estimate_Q3__c &lt;&gt; 0, 
  Owner_Estimate_Q4__c &lt;&gt; 0 
 ) 
)</errorConditionFormula>
    <errorDisplayField>Owner_Estimate__c</errorDisplayField>
    <errorMessage>Use either the Annual Estimate or Quarterly Estimate, not both.</errorMessage>
</ValidationRule>