src/objects/Discretionary_Plan__c/validationRules/EstimateAnnualOrQuarter_DS.validationRule-meta.xml
<ValidationRule>
    <fullName>EstimateAnnualOrQuarter_DS</fullName>
    <active>false</active>
    <errorConditionFormula>and( 
not CONTAINS( $Profile.Name, &quot;API&quot; ),
not CONTAINS( $Profile.Name, &quot;Admin&quot; ),
 or(
  Owner_Estimate_Q1__c &lt;&gt; 0,  
  Owner_Estimate_Q2__c &lt;&gt; 0,
  Owner_Estimate_Q3__c &lt;&gt; 0,
  Owner_Estimate_Q4__c &lt;&gt; 0
 ),
 Opportunity_SBU__c = &quot;D&amp;S&quot;
)</errorConditionFormula>
    <errorDisplayField>Owner_Estimate__c</errorDisplayField>
    <errorMessage>D&amp;S can only use Annual Estimate.</errorMessage>
</ValidationRule>