src/objects/Discretionary_Plan__c/validationRules/EstimateAnnualOrQuarter_NonDS.validationRule-meta.xml
<ValidationRule>
    <fullName>EstimateAnnualOrQuarter_NonDS</fullName>
    <active>false</active>
    <errorConditionFormula>and( 
 Owner_Estimate__c &lt;&gt; 0, 
 Opportunity_SBU__c &lt;&gt; &quot;D&amp;S&quot; 
)</errorConditionFormula>
    <errorDisplayField>Owner_Estimate_Q1__c</errorDisplayField>
    <errorMessage>Commercial can only use Quarterly Estimate.</errorMessage>
</ValidationRule>