src/objects/Discretionary_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SBU__c</columns>
    <columns>Owner_Estimate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>All</label>
</ListView>